Nav bar + telephone burger style

--- a/VigorousSip/Views/Home/Index.cshtml
+++ b/VigorousSip/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<!--
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -103,4 +103,9 @@
             <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
         </ul>
     </div>
+</div>
+    -->
+<div>
+    <p z-index="1" align="center">Nice to see you</p>
+
 </div>
