--- a/VigorousSip/Views/Shared/_Layout.cshtml
+++ b/VigorousSip/Views/Shared/_Layout.cshtml
@@ -6,56 +6,85 @@
     <title>@ViewData["Title"] - VigorousSip</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <!--<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />-->
+        <link rel="stylesheet" href="~/css/HeaderStyles.css" />
     </environment>
 
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <!--<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+             asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+     asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />-->
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-</head>
+    </head>
 
 <body>
-    <nav class="navbar navbar-fixed-top navbar-light bg-light">
-        <a class="navbar-brand " href="#">
-            <img src="~/images/mini-vector-logo-small.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        </a>
-    </nav>
+    <header>
+        <div class="container nav">
+            <nav>
+                <label for="toggle" class="navbutton">&#9776</label>
+                <input type="checkbox" id="toggle" />
+                <!--<img src="~/images/logo.png" class="logo" alt="Shop logo">-->
+                <div class="menu">
+                    <a asp-area="" asp-controller="Home" asp-action="Shop">Items</a>
+                    <a href="#">About</a>
+                    <a href="#">On sale</a>
+                    <a href="#">About</a>
+                </div>
+            </nav>
+        </div>
+    </header>
 
+
+    <!--                <a  href="#">
+        <img src="~/images/mini-vector-logo-small.png" width="60" height="60" class="" alt="">
+    </a>
+
+    <a asp-area="" asp-controller="Home" asp-action="Shop" class="btn btn-danger">Shop</a>
+
+                </a>
+                -->
     <!--
-        <nav class="navbar navbar-inverse navbar-fixed-top ">
-            <div class="container ">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">VigorousSip</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-danger">Home</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Shop">Shop</a></li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top ">
+        <div class="container ">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">VigorousSip</a>
             </div>
-        </nav>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-danger">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Shop">Shop</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    -->
+    <!--
+    <div class="">
         -->
-    <div class="container body-content">
+    <div class="main" >
         @RenderBody()
-        <hr />
-        <footer>
+    
+    </div>
+
+        <footer class="footer">
+            <hr />
             <p>&copy; 2018 - VigorousSip</p>
         </footer>
-    </div>
-    -
+    
+       
+
+
+
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
@@ -77,6 +106,6 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
-    @RenderSection("Scripts", required: false)
+    @*@RenderSection("Scripts", required: false)*@
 </body>
-    </html>
+</html>
